--- a/src/components/css/ControlPanel.css
+++ b/src/components/css/ControlPanel.css
@@ -1,3 +1,10 @@
+.control-panel {
+    border: 1px solid #e0e0e0;
+    padding: .5rem;
+
+    border-radius: 5px;
+}
+
 .control-panel-input.valid {
     background-color: #c8e6c9;
 }
